Fix submenu not overflowing in RHS

--- a/components/dot_menu/dot_menu.scss
+++ b/components/dot_menu/dot_menu.scss
@@ -21,4 +21,8 @@
         float: right;
         opacity: 0.7;
     }
+
+    .postReminderSubMenuRHS {
+        left: 0;
+    }
 }
